--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
